Comment out the copyright code.

--- a/themes/minimo/layouts/partials/footer/copyright.html
+++ b/themes/minimo/layouts/partials/footer/copyright.html
@@ -1,6 +1,6 @@
 <div class='copyright'>
   <p>
-  {{- with .Site.Copyright -}}
+  <!-- {{- with .Site.Copyright -}}
     {{ . }}
   {{- else -}}
     {{- with .Site.Params.copyright -}}
@@ -13,6 +13,6 @@
 
       {{ .prefix | markdownify }} &copy; {{ with ( $.Scratch.Get "copyrightStartYear" ) }}{{ . }}-{{ end }}{{ now.Year }} {{ or .holder $.Site.Title | markdownify }} {{ .suffix | markdownify }}
     {{- end -}}
-  {{- end -}}
+  {{- end -}} -->
   </p>
 </div>
