Remove dupe partials and comment out copyright.

--- a/themes/minimo/layouts/partials/footer.html
+++ b/themes/minimo/layouts/partials/footer.html
@@ -3,7 +3,7 @@
       <footer id='footer' class='footer'>
         <div class='container sep-before'>
           {{ partial "nav/menus/social" . }}
-          {{ partial "footer/copyright" . }}
+          <!-- {{ partial "footer/copyright" . }} -->
         </div>
       </footer>
 
