--- a/themes/minimo/layouts/partials/head/includes.html
+++ b/themes/minimo/layouts/partials/head/includes.html
@@ -1,9 +1,9 @@
 <link rel='icon' href='{{ ( or .Site.Params.assets.favicon "favicon.ico" ) | relURL }}'>
 <link rel='stylesheet' href='{{ print "/assets/css/" .Site.Data.assets.main.css | relURL  }}'> 
 
-<!-- {{- range .Site.Params.assets.customCSS -}}
+{{- range .Site.Params.assets.customCSS -}}
   <link rel='stylesheet' href='{{ . | relURL }}'>
-{{- end -}} -->
+{{- end -}}
 
 {{ range .Site.Params.custom_css -}}
   <link rel="stylesheet" href="{{ . | absURL }}">
